css/style.css
/* Some resets */
*, *::after, *::before {
    box-sizing: inherit;
}

html {
    box-sizing: border-box;
    font-family: 'Roboto', sans-serif;
}

body {
    -webkit-font-smoothing: antialiased;
    -moz-osx-font-smoothing: grayscale;
}

body, p {
    padding: 0;
    margin: 0;
}

/* Navigation at top of page. */
nav {
    width: 100%;
    background-color: #c0392b;
    font-size: 16px;
    text-align: center;
    color: white;
    overflow: auto;
}

.nav-inner {
    width: 960px;
    margin: auto;
}

.nav-inner ul {
    list-style: none;
    margin: 0;
    padding: 0;
}

.nav-inner ul li {
    float: left;
    margin-right: 8px;
}

.nav-inner ul li a {
    display: inline-block;
    text-decoration: none;
    padding: 10px 0;
    font-weight: 700;
    transition: all 0.3s ease-in-out;
}

.nav-inner ul li a:hover {
    color: #cacaca;
}

/* Main banner. */
header {
    width: 960px;
    margin: auto;
    text-align: center;
    padding-bottom: 16px;
    margin-bottom: 16px;
    border-bottom: 1px solid #dedede;
}

.splash-text {
    margin-bottom: 16px;
    border: 1px solid #ccc;
}

.splash-image {
    width: 90%;
    max-width: 300px;
    margin-top: 40px;
    margin-bottom: 24px;
}

h1 {
    font-size: 1.5em;
    margin: 0;
    font-weight: 400;
    text-align: left;
    padding: 6px 8px;
    background-color: #f7f7f7;
    color: #7f8c8d;
    font-weight: 700;
    border-bottom: 1px solid #ccc;
}

header p {
    font-size: 18px;
    padding: 8px 8px;
    text-align: left;
    color: #7f8c8d;
    line-height: 1.5;
    font-weight: 400;
}

span {
    color: #c0392b;
    font-weight: bold;
}

a {
    color: rgb(230, 230, 230);
}

a:visited, a:hover {
    color: rgb(230, 230, 230);
}

/* Core output container */
#output {
    font-size: 1.1em;
    color: #7f8c8d;
    width: 960px;
    margin: auto;
}

/* Grid for images */
.row {
    display: flex;
    margin-bottom: 8px;
}

.image-container {
    position: relative;
    margin: 0 4px 0 4px;
}

.image-container:first-child {
    margin-left: 0;
}

.image-container:last-child {
    margin-right: 0;
}

img, video {
    width: 100%;
}

.image-title {
    display: none; /* start off hidden */
    position: absolute;
    bottom: 0;
    left: 0;
    padding: 4px;
    width: 100%;
    color: #FFF;
    background-color: rgba(0, 0, 0, 0.3);
    font-size: 13px;
}

.image-container:hover .image-title {
    display: block;
}

.image-loading {
    -webkit-filter: blur(3px);
    -moz-filter: blur(3px);
    -o-filter: blur(3px);
    -ms-filter: blur(3px);
    filter: blur(3px);
}

.box-shadow {
    box-shadow: 0 0px 4px 0 rgba(0, 0, 0, 0.25);
}

.image-zoom {
    box-shadow: 0 0px 4px 0 rgba(0, 0, 0, 0.25);
    cursor: pointer;
    transition: all 0.3s ease-in-out;
}

.image-zoom:hover {
    box-shadow: 0 10px 20px rgba(0,0,0,0.19), 0 6px 6px rgba(0,0,0,0.23);
}

#image-loading-message {
    display: none;
    text-align: center;
    font-size: 52px;
    padding: 20px 0;
}

/* overlay */
#overlay {
    display: none;
    background-color: rgba(0, 0, 0, 0.75);
    position: fixed;
    height: 100%;
    width: 100%;
    top: 0;
    left: 0;
    text-align: center;
    z-index: 2;
}

#overlay-inner {
    width: 90%;
    height: 90%;
    display: inline-block;
    text-align: center;
    padding: 2em;
}

#overlay-image, #overlay-video {
    width: auto;
    max-height:100%;
    max-width:100%;
    display: inline-block;
    box-shadow: none;
    margin: auto;
}

#overlay-title {
    width: 90%;
    margin: auto;
    background-color: inherit;
    color: #FFF;
    margin-bottom: 16px;
    font-size: 1.5em;
}

.overlay-user-outer {
    display: block;
    text-align: center;
}

#overlay-user {
    padding: 8px;
    color: #FFF;
    background-color: inherit;
    display: inline-block;
    font-size: 1em;
    margin-top: 8px;
    border: 2px solid grey;
    border-radius: 5px;
    cursor: pointer;
}
#overlay-user:hover {
    background-color: #FFF;
    color: #000;
}
/* End overlay */

/* Input field */
.input-style {
    padding: 8px;
    border: 1px solid #ccc;
    font-size: 1.5em;
    margin: 0;
}

form {
    display: flex;
    margin-bottom: 0;
}

form input[type='text'] {
    display: inline-block;
    outline: none;
    cursor: inherit;
    width: 90%;
    font-weight: 400;
    flex: 1;
    -webkit-appearance: none;
    -webkit-border-radius: 0;
}

form input[type='submit'] {
    background-color: #FFF;
    border-left: none;
    cursor: pointer;
    background-color: hsla(31,15%,50%,.1);
    transition: all 0.1s ease-in-out;
    -webkit-appearance: none;
    -webkit-border-radius: 0;
}

form input[type='submit']:hover {
    background-color: #c0392b;
    color: #FFF;
}

form select {
    border-radius: 0;
    -webkit-appearance: none;
    -webkit-border-radius: 0px;
    cursor: pointer;
    transition: all 0.1s ease-in-out;
}

form select:hover {
    background-color: #c0392b;
    color: #FFF;
}
/* End Inputs */

/* Condense on smaller screen */
@media screen and (max-width: 960px) {
    #output {
        width: 95%;
        margin: auto;
    }

    header {
        width: 95%;
        margin: auto;
        margin-bottom: 20px;
    }
    #output {
        width: 100%;
    }

    .nav-inner {
        margin-left: 8px;
        width: 95%;
    }
}

@media screen and (max-width: 500px) {
    header {
        width: 100%;
    }
    .row {
        margin-bottom: 2px;
    }
    #overlay-inner {
        width: 100%;
    }
    .image-container {
        margin: 4px 2px;
    }
    input[type=text] {
        width: 100%;
    }
    header img {
        margin: 8px 0;
        width: 75%;
    }
    header p {
        font-size: 1em;
    }
    .input-style {
        font-size: 0.9em;
    }
}

